--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
                         <li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
                         <li data-target="#myCarousel" data-slide-to="3"></li>
-                        <li data-target="#myCarousel" data-slide-to="4"></li>
+<!--                         <li data-target="#myCarousel" data-slide-to="4"></li> -->
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
 
-                        <div class="carousel-item active">
+<!--                         <div class="carousel-item active">
                             <img class= "slide_image" class = "img-responsive" src="photos/about_us_6.JPG" alt="first image">
-                        </div>
+                        </div> -->
 
-                        <div class="carousel-item">
+                        <div class="carousel-item active">
                             <img class= "slide_image" class = "img-responsive" src="photos/about_us_1.JPG" alt="second image">
                         </div>
 
