--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
                         <li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
                         <li data-target="#myCarousel" data-slide-to="3"></li>
-                        <li data-target="#myCarousel" data-slide-to="4"></li>
+<!--                         <li data-target="#myCarousel" data-slide-to="4"></li> -->
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
 
-                        <div class="carousel-item active">
+<!--                         <div class="carousel-item active">
                             <img class= "slide_image" class = "img-responsive" src="photos/about_us_6.JPG" alt="first image">
-                        </div>
+                        </div> -->
 
-                        <div class="carousel-item">
+                        <div class="carousel-item active">
                             <img class= "slide_image" class = "img-responsive" src="photos/about_us_1.JPG" alt="second image">
                         </div>
 
@@ -665,14 +665,14 @@
                 <div class = "follow_us_container" id = "twitter">
                     <h3> Twitter: </h3>
                     <a href = "https://twitter.com/SFBAC_APA" target = "_blank">
-                        <img class = "follow_image" src = "photos/twitter_logo.png"/ alt = "twitter logo">
+                        <img class = "follow_image" src = "photos/twitter_logo.png" alt = "twitter logo">
                     </a>
                 </div>
         
                 <div class = "follow_us_container" id = "facebook">
                     <h3> Facebook: </h3>
                     <a href = "https://www.facebook.com/payrollpeeps/" target = "_blank">
-                        <img class = "follow_image" id = "facebook_logo" src = "photos/facebook_logo.png"/ alt = "facebook logo">
+                        <img class = "follow_image" id = "facebook_logo" src = "photos/facebook_logo.png" alt = "facebook logo">
                     </a>
                 </div>
             </div> <!-- end of contact info -->
