--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
      <meta charset = "UTF-8">
     
      <!-- styles -->
-     <link rel = "stylesheet" type = "text/css" href = "../styles/bootstrap.min.css">
+     <link rel = "stylesheet" type = "text/css" href = "/styles/bootstrap.min.css">
      <link rel = "stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato" />
      <link rel = "stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Prociono" />
      <link rel = "stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" >
-     <link rel = "stylesheet" type = "text/css" href = "../styles/payroll.css">
+     <link rel = "stylesheet" type = "text/css" href = "/styles/payroll.css">
     
      <!-- scripts -->
      <script type="text/javascript" src = "scripts/jquery-3.2.1.min.js"> </script>
