fixed texts on mobile view

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 <img id = "about_us_1" src = "photos/about_us_3.JPG" alt = "chapter photo" />
                 <br>
                 <h2 class = "text-center font-italic " > San Francisco Bay Area Chapter </h2>
-                <div class = "blockquote_caption" id  = >
+                <div class = "blockquote_caption">
                     <blockquote class = "font-weight-bold" id = "about_us_part1_blockquote">
                         The SFBAC has been providing educational and networking opportunities for the local Payroll 
                         Professional since 1983. Every day, we strive to support the Payroll Professional with member benefits 
