modified mobile version

--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
           
             <br>
 
-            <div class = "learning_resources" id = "open_positions">
+            <div class = "learning_resources underline" id = "open_positions">
                 <h3> Open Positions </h3>
 
                     <li> <a href = "http://www.sfpayroll.org/JobPosting/2018/Payroll__Benefits___HRIS_Manager_0808.pdf" target="_blank"> Payroll, Benefits & HRIS Manager </a> San Rafael, EAH Housing, 8/08/2018 </li>
