--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -10,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />  
-    <title>React App</title>
+    <title>San Francisco Payroll Association</title>
   </head>
   <body>
     <div id="root"></div>
